[package]
name = "requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json"]}
tokio = {version = "1.20.1", features = ["full"]}
serde_json = "1.0.82"
serde = {version = "1.0.140", features = ["derive"]}
rand = "0.8.5"
zipf = "7.0.0"

[dev-dependencies]
tokio-postgres = "0.7.7"
postgres-native-tls = "0.5.0"
native-tls = "0.2.10"
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "query"
harness = false